Issue #17645: convert an assert() into a proper exception in _Py_Mangle().